# qq-bot-lain

./: .gitignore  Dockerfile  Makefile  Readme.md  config.yaml  demo_dynamic_config.py  main.py  models.py  pyproject.toml  services.py  start.sh  test_memory_api.py  test_prompt_simulation.py
qqbot/: __init__.py  api.py  bot.py  config_loader.py  database.py  main.py  mem0_memory.py  memory_service.py  message_parsing.py  models.py  sample-config.py  services.py  streaming.py  test.py  text_utils.py
qqbot/agentic_memory/: __init__.py  group_memory_manager.py
tests/: test_message_splitting.py  test_text_utils_and_parsing.py
