[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-chat"
version = "0.1.0"
description = "A Gemini chat application"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "Readme.md"
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "pydantic",
    "google-genai>=1.54.0",
    "python-dotenv",
    "aiohttp",
    "Pillow",
    "dynaconf>=3.2.11",
    "mem0ai>=1.0.1",
    "chromadb>=0.4.24",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["__pycache__*", "*.pyc", "*.pyo", "*.pyd"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
